--- a/cv-latex/cv.tex
+++ b/cv-latex/cv.tex
@@ -41,27 +41,28 @@ B.Sc. in Mathematics, University of Science and Technology of China \hfill June 
 \section*{Research Interests}
 Bioinformatics, Deep Learning, Computational Chemistry, Computer Science, Mathematics
 \section*{Skills}
-\textbf{Programming:} Python / PyTorch / C++ / \LaTeX / Bash / Fortran / Rust / HTML / Javascript / Coq / Mathematica / MATLAB / Go / Haskell\\
-\textbf{Softwares/Tools:} AutoDock Vina / PyMOL / GIMP / Powerpoint / Git / Docker / VSCode\\
+\textbf{Programming:} Python / PyTorch / C++ / \LaTeX / Bash / Fortran / Rust / HTML / Javascript / Flask / Django / Go / Coq / Mathematica / MATLAB / Haskell\\
+\textbf{Softwares:} AutoDock Vina / PyMOL / GIMP / Powerpoint / Git / Docker / VSCode\\
+\textbf{Hardware:} GPU workstation building / Linux server maintenance / Raspberry Pi\\
 \textbf{Languages:} English (fluent), Chinese (native), Japanese (basic)
 
 \section*{Publications}
 \begin{enumerate}
-    \item \underbar{Shijie Xu} and Akira Onoda*. ``Accurate and Fast Prediction of Intrinsically Disordered Protein by Multiple Protein Language Models and Ensemble Learning.'' Journal of Chemical Information and Modeling 64(7): 2901-2911 \emph{DOI:} \url{https://doi.org/10.1021/acs.jcim.3c01202} 
-    \item \underbar{Shijie Xu} and Akira Onoda*. ``PsiPartition: Improved Site Partitioning for Genomic Data by Parameterized Sorting Indices and Bayesian Optimization.'' Accepted by \textit{Journal of Molecular Evolution}
+    \item \underbar{Shijie Xu} and Akira Onoda*. ``PsiPartition: Improved Site Partitioning for Genomic Data by Parameterized Sorting Indices and Bayesian Optimization.'' \textit{Journal of Molecular Evolution} 92: 874-890, \textbf{2024}, \emph{DOI:} \url{https://doi.org/10.1007/s00239-024-10215-7}
+    \item \underbar{Shijie Xu} and Akira Onoda*. ``Accurate and Fast Prediction of Intrinsically Disordered Protein by Multiple Protein Language Models and Ensemble Learning.'' \textit{Journal of Chemical Information and Modeling} 64(7): 2901-2911, \textbf{2023}, \emph{DOI:} \url{https://doi.org/10.1021/acs.jcim.3c01202} 
     \item \underbar{Shijie Xu} and Akira Onoda*. ``Accurate and Rapid Prediction of Protein \pKa{}: Protein Language Models Reveal the Sequence-\pKa{} Relationship.'' Under review.
 \end{enumerate}
 \section*{Presentations}
 \begin{itemize}
-    \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate Prediction of Protein \pKa{} by Geometric Deep Learning,'' the 104th CSJ annual meeting, 18th Mar - 21st Mar 2024, Funabash, Japan. [Oral]
-    \item \underbar{Shijie Xu} and Akira Onoda, ``Fast and Accurate Prediction of Intrinsically Disordered Protein by Protein Language Model,'' the 103rd CSJ annual meeting, 22nd Mar - 25th Mar 2023, Chiba, Japan. [Oral]
     \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate and Fast Prediction of Protein \pKa{} by Protein Language Model,'' 8th ICReDD International Symposium, 22nd Oct - 24th Oct 2024, Sapporo, Japan. [Poster]
     \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate Prediction of Intrinsically Disordered Protein by Protein Language Models,'' the 24th Annual Meeting of the Protein Science Society of Japan, 11th Jul - 13th Jul 2024, Sapporo, Japan. [Poster]
-    \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate Prediction of Intrinsically Disordered Protein by Protein Language Models,'' the 17th Biorelevant Chemistry Symposium, 8th Sep - 10th Sep 2023, Chiba, Japan. [Poster]    
+    \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate Prediction of Protein \pKa{} by Geometric Deep Learning,'' the 104th CSJ annual meeting, 18th Mar - 21st Mar 2024, Funabash, Japan. [Oral]
+    \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate Prediction of Intrinsically Disordered Protein by Protein Language Models,'' the 17th Biorelevant Chemistry Symposium, 8th Sep - 10th Sep 2023, Chiba, Japan. [Poster]
+    \item \underbar{Shijie Xu} and Akira Onoda, ``Fast and Accurate Prediction of Intrinsically Disordered Protein by Protein Language Model,'' the 103rd CSJ annual meeting, 22nd Mar - 25th Mar 2023, Chiba, Japan. [Oral] 
 \end{itemize}
 \section*{Awards, Fellowships, and Grants}
 \begin{itemize}
-    \item Program for Supporting Challenging and Interdisciplinary Research Field, 2022, 2023
+    \item Program for Supporting Challenging and Interdisciplinary Research Field, 2022, 2023, 2024
     \item Hokkaido University DX Doctoral Fellowship, 2022-2025
     \item Outstanding Student Scholarship, University of Science and Technology of China, 2016
     \item S.-T. Yau College Student Mathematics Contests, Beijing, China, 2016
