update bio & press release

--- a/cv-latex/cv.tex
+++ b/cv-latex/cv.tex
@@ -21,7 +21,7 @@
     Graduate School of Environmental Science, Hokkaio University\\
     Kita-10 Nishi-5, Kita-ku, Sapporo, Hokkaido, 060-0810, Japan\\
 
-    \href{mailto:shijie.xu@ees.hokudai.ac.jp}{shijie.xu@ees.hokudai.ac.jp} ~~~\textbullet{}~~~\href{https://xu-shi-jie.github.io}{xu-shi-jie.github.io}
+    \href{mailto:shijie.xu@ees.hokudai.ac.jp}{shijie.xu@ees.hokudai.ac.jp}
 \end{minipage}
 \hfill
 % Header with Photo
@@ -36,12 +36,13 @@ March 9th, 1995
 % Education
 \section*{Education}
 Ph.D. in Environmental Science, Hokkaido University \hfill March 2025 (expected)\\
+\textit{Dissertation Title:} ``Accurate and Fast Predictions of Protein Structures and Properties via Protein Language Models''\\
 M.Sc. in Computer Science, University of Science and Technology of China \hfill June 2020\\
 B.Sc. in Mathematics, University of Science and Technology of China \hfill June 2017
 \section*{Research Interests}
 Bioinformatics, Deep Learning, Computational Chemistry, Computer Science, Mathematics
 \section*{Skills}
-\textbf{Programming:} Python / PyTorch / C++ / \LaTeX / Bash / Fortran / Rust / HTML / Javascript / Flask / Django / Go / Coq / Mathematica / MATLAB / Haskell\\
+\textbf{Programming:} Python / PyTorch / C++ / \LaTeX / Bash / Fortran / Rust / HTML / Javascript / FastAPI / Flask / Django / Go / Mathematica / MATLAB / Coq / Haskell\\
 \textbf{Softwares:} AutoDock Vina / PyMOL / GIMP / Powerpoint / Git / Docker / VSCode\\
 \textbf{Hardware:} GPU workstation building / Linux server maintenance / Raspberry Pi\\
 \textbf{Languages:} English (fluent), Chinese (native), Japanese (basic)
