--- a/cv-latex/cv.tex
+++ b/cv-latex/cv.tex
@@ -74,6 +74,7 @@ Bioinformatics, Deep Learning, Computational Chemistry, Computer Science, Mathem
     \end{enumerate}
 \section*{Presentations}
 \begin{itemize}
+    \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate and Fast Prediction of Protein \pKa{} by Protein Language Model,'' 51th Biomolecule Science Symposium, 26nd Oct - 27th Jun 2025, Sapporo, Japan. [Oral]
     \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate and Fast Prediction of Protein \pKa{} by Protein Language Model,'' 8th ICReDD International Symposium, 22nd Oct - 24th Oct 2024, Sapporo, Japan. [Poster]
     \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate Prediction of Intrinsically Disordered Protein by Protein Language Models,'' the 24th Annual Meeting of the Protein Science Society of Japan, 11th Jul - 13th Jul 2024, Sapporo, Japan. [Poster]
     \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate Prediction of Protein \pKa{} by Geometric Deep Learning,'' the 104th CSJ annual meeting, 18th Mar - 21st Mar 2024, Funabash, Japan. [Oral]
