--- a/cv-latex/cv.tex
+++ b/cv-latex/cv.tex
@@ -63,9 +63,9 @@ Bioinformatics, Deep Learning, Computational Chemistry, Computer Science, Mathem
 \section*{Skills}
 \textbf{Programming:} Python / C++ / \LaTeX / FORTRAN / Rust / Mathematica / MATLAB / Coq / Haskell\\
 \textbf{Web development:} HTML / JavaScript / FastAPI / Flask / Django / Go\\
-\textbf{Software:} AutoDock Vina / PyMOL / GIMP / Git / Docker / VSCode\\
+\textbf{Software:} AutoDock Vina / PyMOL / Git / Docker / Singularity / VSCode\\
 \textbf{Hardware:} GPU workstation building / Linux server maintenance / Raspberry Pi\\
-\textbf{Languages:} English (fluent), Chinese (standard and lower Yangtze), Japanese (basic)
+\textbf{Languages:} English (fluent), Japanese (basic), Chinese (standard and lower Yangtze)
 \section*{Publications}
 \begin{enumerate}
     \item \underbar{Shijie Xu} and Akira Onoda*. ``Accurate and Rapid Prediction of Protein \pKa{}: Protein Language Models Reveal the Sequence-\pKa{} Relationship.'' \textit{Journal of Chemical Theory and Computation} 21(7): 3752–3764, \textbf{2025}, \emph{DOI:} \url{https://doi.org/10.1021/acs.jctc.4c01288}
@@ -74,12 +74,13 @@ Bioinformatics, Deep Learning, Computational Chemistry, Computer Science, Mathem
     \end{enumerate}
 \section*{Presentations}
 \begin{itemize}
-    \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate and Fast Prediction of Protein \pKa{} by Protein Language Model,'' 51th Biomolecule Science Symposium, 26nd Oct - 27th Jun 2025, Sapporo, Japan. [Oral]
-    \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate and Fast Prediction of Protein \pKa{} by Protein Language Model,'' 8th ICReDD International Symposium, 22nd Oct - 24th Oct 2024, Sapporo, Japan. [Poster]
-    \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate Prediction of Intrinsically Disordered Protein by Protein Language Models,'' the 24th Annual Meeting of the Protein Science Society of Japan, 11th Jul - 13th Jul 2024, Sapporo, Japan. [Poster]
-    \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate Prediction of Protein \pKa{} by Geometric Deep Learning,'' the 104th CSJ annual meeting, 18th Mar - 21st Mar 2024, Funabash, Japan. [Oral]
-    \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate Prediction of Intrinsically Disordered Protein by Protein Language Models,'' the 17th Biorelevant Chemistry Symposium, 8th Sep - 10th Sep 2023, Chiba, Japan. [Poster]
-    \item \underbar{Shijie Xu} and Akira Onoda, ``Fast and Accurate Prediction of Intrinsically Disordered Protein by Protein Language Model,'' the 103rd CSJ annual meeting, 22nd Mar - 25th Mar 2023, Chiba, Japan. [Oral] 
+    \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate and Fast Prediction of Protein \pKa{} by A Protein Language Model'', the 19th Symposium on Biorelevant Chemistry, 2nd Sep - 4th Sep, 2025, Kyoto, Japan. [Poster]
+    \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate and Fast Prediction of Protein \pKa{} by Protein Language Model'', 51th Biomolecule Science Symposium, 26th Oct - 27th Jun 2025, Sapporo, Japan. [Oral]
+    \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate and Fast Prediction of Protein \pKa{} by Protein Language Model'', 8th ICReDD International Symposium, 22nd Oct - 24th Oct 2024, Sapporo, Japan. [Poster]
+    \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate Prediction of Intrinsically Disordered Protein by Protein Language Models'', the 24th Annual Meeting of the Protein Science Society of Japan, 11th Jul - 13th Jul 2024, Sapporo, Japan. [Poster]
+    \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate Prediction of Protein \pKa{} by Geometric Deep Learning'', the 104th CSJ annual meeting, 18th Mar - 21st Mar 2024, Funabash, Japan. [Oral]
+    \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate Prediction of Intrinsically Disordered Protein by Protein Language Models'', the 17th Biorelevant Chemistry Symposium, 8th Sep - 10th Sep 2023, Chiba, Japan. [Poster]
+    \item \underbar{Shijie Xu} and Akira Onoda, ``Fast and Accurate Prediction of Intrinsically Disordered Protein by Protein Language Model'', the 103rd CSJ annual meeting, 22nd Mar - 25th Mar 2023, Chiba, Japan. [Oral] 
 \end{itemize}
 \section*{Awards, Fellowships, and Grants}
 \begin{itemize}
