--- a/cv-latex/cv.tex
+++ b/cv-latex/cv.tex
@@ -68,10 +68,11 @@ Bioinformatics, Deep Learning, Computational Chemistry, Computer Science, Mathem
 \textbf{Languages:} English (fluent), Japanese (basic), Chinese (standard and lower Yangtze)
 \section*{Publications}
 \begin{enumerate}
-    \item \underbar{Shijie Xu} and Akira Onoda*. ``Accurate and Rapid Prediction of Protein \pKa{}: Protein Language Models Reveal the Sequence-\pKa{} Relationship.'' \textit{Journal of Chemical Theory and Computation} 21(7): 3752–3764, \textbf{2025}, \emph{DOI:} \url{https://doi.org/10.1021/acs.jctc.4c01288}
-    \item \underbar{Shijie Xu} and Akira Onoda*. ``PsiPartition: Improved Site Partitioning for Genomic Data by Parameterized Sorting Indices and Bayesian Optimization.'' \textit{Journal of Molecular Evolution} 92: 874-890, \textbf{2024}, \emph{DOI:} \url{https://doi.org/10.1007/s00239-024-10215-7}
-    \item \underbar{Shijie Xu} and Akira Onoda*. ``Accurate and Fast Prediction of Intrinsically Disordered Protein by Multiple Protein Language Models and Ensemble Learning.'' \textit{Journal of Chemical Information and Modeling} 64(7): 2901-2911, \textbf{2023}, \emph{DOI:} \url{https://doi.org/10.1021/acs.jcim.3c01202} 
-    \end{enumerate}
+    \item \underbar{Shijie Xu} and Akira Onoad*. ``Probe-Based Identification of Metal-Binding Sites Using Deep Learning Representations.'' \textit{Under Review}, \textbf{2025}.
+    \item \underbar{Shijie Xu} and Akira Onoda*. ``Accurate and Rapid Prediction of Protein \pKa{}: Protein Language Models Reveal the Sequence-\pKa{} Relationship.'' \textit{Journal of Chemical Theory and Computation} 21(7): 3752--3764, \textbf{2025}, \emph{DOI:} \url{https://doi.org/10.1021/acs.jctc.4c01288}
+    \item \underbar{Shijie Xu} and Akira Onoda*. ``PsiPartition: Improved Site Partitioning for Genomic Data by Parameterized Sorting Indices and Bayesian Optimization.'' \textit{Journal of Molecular Evolution} 92: 874--890, \textbf{2024}, \emph{DOI:} \url{https://doi.org/10.1007/s00239-024-10215-7}
+    \item \underbar{Shijie Xu} and Akira Onoda*. ``Accurate and Fast Prediction of Intrinsically Disordered Protein by Multiple Protein Language Models and Ensemble Learning.'' \textit{Journal of Chemical Information and Modeling} 64(7): 2901--2911, \textbf{2024}, \emph{DOI:} \url{https://doi.org/10.1021/acs.jcim.3c01202} 
+\end{enumerate}
 \section*{Presentations}
 \begin{itemize}
     \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate and Fast Prediction of Protein \pKa{} by A Protein Language Model'', the 19th Symposium on Biorelevant Chemistry, 2nd Sep - 4th Sep, 2025, Kyoto, Japan. [Poster]
