--- a/cv-latex/cv.tex
+++ b/cv-latex/cv.tex
@@ -68,7 +68,7 @@ Bioinformatics, Deep Learning, Computational Chemistry, Computer Science, Mathem
 \textbf{Languages:} English (fluent), Japanese (basic), Chinese (standard and lower Yangtze)
 \section*{Publications}
 \begin{enumerate}
-    \item \underbar{Shijie Xu} and Akira Onoad*. ``Probe-Based Identification of Metal-Binding Sites Using Deep Learning Representations.'' \textit{Under Review}, \textbf{2025}.
+    \item \underbar{Shijie Xu} and Akira Onoda*. ``Probe-Based Identification of Metal-Binding Sites Using Deep Learning Representations.'' \textit{Under Review}, \textbf{2025}.
     \item \underbar{Shijie Xu} and Akira Onoda*. ``Accurate and Rapid Prediction of Protein \pKa{}: Protein Language Models Reveal the Sequence-\pKa{} Relationship.'' \textit{Journal of Chemical Theory and Computation} 21(7): 3752--3764, \textbf{2025}, \emph{DOI:} \url{https://doi.org/10.1021/acs.jctc.4c01288}
     \item \underbar{Shijie Xu} and Akira Onoda*. ``PsiPartition: Improved Site Partitioning for Genomic Data by Parameterized Sorting Indices and Bayesian Optimization.'' \textit{Journal of Molecular Evolution} 92: 874--890, \textbf{2024}, \emph{DOI:} \url{https://doi.org/10.1007/s00239-024-10215-7}
     \item \underbar{Shijie Xu} and Akira Onoda*. ``Accurate and Fast Prediction of Intrinsically Disordered Protein by Multiple Protein Language Models and Ensemble Learning.'' \textit{Journal of Chemical Information and Modeling} 64(7): 2901--2911, \textbf{2024}, \emph{DOI:} \url{https://doi.org/10.1021/acs.jcim.3c01202} 
@@ -76,10 +76,10 @@ Bioinformatics, Deep Learning, Computational Chemistry, Computer Science, Mathem
 \section*{Presentations}
 \begin{itemize}
     \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate and Fast Prediction of Protein \pKa{} by A Protein Language Model'', the 19th Symposium on Biorelevant Chemistry, 2nd Sep - 4th Sep, 2025, Kyoto, Japan. [Poster]
-    \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate and Fast Prediction of Protein \pKa{} by Protein Language Model'', 51th Biomolecule Science Symposium, 26th Oct - 27th Jun 2025, Sapporo, Japan. [Oral]
+    \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate and Fast Prediction of Protein \pKa{} by Protein Language Model'', 51st Biomolecule Science Symposium, 26th Oct - 27th Oct 2025, Sapporo, Japan. [Oral]
     \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate and Fast Prediction of Protein \pKa{} by Protein Language Model'', 8th ICReDD International Symposium, 22nd Oct - 24th Oct 2024, Sapporo, Japan. [Poster]
     \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate Prediction of Intrinsically Disordered Protein by Protein Language Models'', the 24th Annual Meeting of the Protein Science Society of Japan, 11th Jul - 13th Jul 2024, Sapporo, Japan. [Poster]
-    \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate Prediction of Protein \pKa{} by Geometric Deep Learning'', the 104th CSJ annual meeting, 18th Mar - 21st Mar 2024, Funabash, Japan. [Oral]
+    \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate Prediction of Protein \pKa{} by Geometric Deep Learning'', the 104th CSJ annual meeting, 18th Mar - 21st Mar 2024, Funabashi, Japan. [Oral]
     \item \underbar{Shijie Xu} and Akira Onoda, ``Accurate Prediction of Intrinsically Disordered Protein by Protein Language Models'', the 17th Biorelevant Chemistry Symposium, 8th Sep - 10th Sep 2023, Chiba, Japan. [Poster]
     \item \underbar{Shijie Xu} and Akira Onoda, ``Fast and Accurate Prediction of Intrinsically Disordered Protein by Protein Language Model'', the 103rd CSJ annual meeting, 22nd Mar - 25th Mar 2023, Chiba, Japan. [Oral] 
 \end{itemize}
@@ -87,10 +87,10 @@ Bioinformatics, Deep Learning, Computational Chemistry, Computer Science, Mathem
 \begin{itemize}
     \item Program for Supporting Challenging and Interdisciplinary Research Field, 2022, 2023, 2024
     \item Hokkaido University DX Doctoral Fellowship, 2022-2025
-    \item Outstanding Student Scholarship, University of Science and Technology of China, 2016
-    \item S.-T. Yau College Student Mathematics Contests, Beijing, China, 2016
-    \item Outstanding Freshman Scholarship, University of Science and Technology of China, 2014
-    \item First Prize Winner in National High School Mathematics League, Hefei, Anhui, China, 2012
+    \item Recipient of the Outstanding Student Scholarship, University of Science and Technology of China, 2016
+    \item S.-T. Yau College Student Mathematics Contest, Beijing, China, 2016
+    \item Recipient of the Outstanding Freshman Scholarship, University of Science and Technology of China, 2014
+    \item Winner of the First Prize in the National High School Mathematics League, Hefei, Anhui, China, 2012
 \end{itemize}
 
 \end{document}
