--- a/cv-latex/cv.tex
+++ b/cv-latex/cv.tex
@@ -61,13 +61,14 @@ Postdoctoral Researcher, Hokkaido University\hfill April 2025 - Present\\
 \section*{Research Interests}
 Bioinformatics, Deep Learning, Computational Chemistry, Computer Science, Mathematics
 \section*{Skills}
-\textbf{Programming:} Python / C++ / \LaTeX / FORTRAN / Rust / Mathematica / MATLAB / Coq / Haskell\\
+\textbf{Programming:} Python / C++ / CUDA / \LaTeX / FORTRAN / Rust / Mathematica / MATLAB / Coq / Haskell\\
 \textbf{Web development:} HTML / JavaScript / FastAPI / Flask / Django / Go\\
 \textbf{Software:} AutoDock Vina / PyMOL / Git / Docker / Singularity / VSCode\\
 \textbf{Hardware:} GPU workstation building / Linux server maintenance / Raspberry Pi\\
-\textbf{Languages:} English (fluent), Japanese (basic), Chinese (standard and lower Yangtze)
+\textbf{Languages:} English (fluent), Japanese (basic), Chinese (native)
 \section*{Publications}
 \begin{enumerate}
+    \item \underbar{Shijie Xu}, Ke Xu, and Akira Onoda*. ``Accurate Prediction of Enzymatic Degradation of Plastics by Language Models.'' \textit{Chemistry Letters}, \textbf{2026}, \emph{DOI:} \url{https://doi.org/10.1093/chemle/upag022}
     \item \underbar{Shijie Xu} and Akira Onoda*. ``Probe-Based Identification of Metal-Binding Sites Using Deep Learning Representations.'' \textit{Under Review}, \textbf{2025}.
     \item \underbar{Shijie Xu} and Akira Onoda*. ``Accurate and Rapid Prediction of Protein \pKa{}: Protein Language Models Reveal the Sequence-\pKa{} Relationship.'' \textit{Journal of Chemical Theory and Computation} 21(7): 3752--3764, \textbf{2025}, \emph{DOI:} \url{https://doi.org/10.1021/acs.jctc.4c01288}
     \item \underbar{Shijie Xu} and Akira Onoda*. ``PsiPartition: Improved Site Partitioning for Genomic Data by Parameterized Sorting Indices and Bayesian Optimization.'' \textit{Journal of Molecular Evolution} 92: 874--890, \textbf{2024}, \emph{DOI:} \url{https://doi.org/10.1007/s00239-024-10215-7}
@@ -90,7 +91,7 @@ Bioinformatics, Deep Learning, Computational Chemistry, Computer Science, Mathem
     \item Recipient of the Outstanding Student Scholarship, University of Science and Technology of China, 2016
     \item S.-T. Yau College Student Mathematics Contest, Beijing, China, 2016
     \item Recipient of the Outstanding Freshman Scholarship, University of Science and Technology of China, 2014
-    \item Winner of the First Prize in the National High School Mathematics League, Hefei, Anhui, China, 2012
+    \item Winner of the First Prize in the National High School Mathematics League (province level), Hefei, Anhui, China, 2012
 \end{itemize}
 
 \end{document}
